--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,7 +48,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EventDetailActivity"
+            android:name="org.chicktech.activities.EventDetailActivity"
             android:label="@string/title_activity_event_detail" >
         </activity>
     </application>
