--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Base.AppCompat.Light.DarkActionBar" >
         <activity
+            android:screenOrientation="portrait"
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
