--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.mobsandgeeks:android-saripaar:1.0.2'
     compile 'com.wefika:flowlayout:0.3.4'
+    compile files('libs/universal-image-loader-1.8.4.jar')
 }
