--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <application
         android:name=".application.CTApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/chicktech_icon_android"
         android:label="@string/app_name"
         android:theme="@style/CTAppTheme" >
         <activity
