--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
 
         <meta-data
             android:name="com.parse.push.notification_icon"
-            android:resource="@drawable/ic_launcher" />
+            android:resource="@drawable/chicktech_icon_android" />
 
         <receiver android:name=".receivers.EventNotificationReceiver" >
             <intent-filter>
